# fastapi-passkey-starter-kit

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
app/routers/: admin.py  auth.py  pages.py  passkeys.py
app/services/: session_service.py  settings_service.py  token_service.py  webauthn.py
scripts/: create_bootstrap_token.py
templates/: admin.html  login.html  me.html  passkeys.html  signup.html
tests/: conftest.py  test_auth_flow.py  test_pages.py
